# agg

./: .env  .gitignore  Anchor.toml  create-codama-client.ts  package.json  pnpm-lock.yaml  whirLbMiicVdio4qvUfM5KAg6Ct8VwpYzGff3uctyCc.json
.test-ledger/: faucet-keypair.json
binaries/: README.md
docs/: 05_sol_instructions_cpi_cheatsheet.md
examples/: orca_route.ts
idl/: lifinity.json
programs/aggregator/: Cargo.toml
programs/aggregator/src/: adapter.rs  error.rs  lib.rs  state.rs  test.rs  tests.rs
programs/aggregator/src/adapter/: invariant.rs  lifinity.rs  mod.rs  orca.rs  solar_clmm.rs  solar_cp.rs
scripts/: start-validator.sh
tests/: a.json  adapter_invariant.test.ts  adapter_lifinity.test.ts  adapter_orca.test.ts  adapter_solar_clmm.test.ts  adapter_solar_cp.test.ts  aggregator.ts  client.ts  edge_cases.test.ts  fee_transfer.test.ts  fuzz.test.ts  integration.test.ts  orca.ts  programid_fuzz.test.ts  property.test.ts  t.json  unit.test.ts  utils.ts
tests/amm_helpers/: lifinity.ts  orca.ts
tests/e2e/: bootstrap.ts
tests/e2e/router/: lifinity_swap.test.ts
tests/integration/adapters/: adapter_invariant.test.ts  adapter_lifinity.test.ts  adapter_orca.test.ts  adapter_solar_clmm.test.ts  adapter_solar_cp.test.ts
tests/integration/router/: basic.test.ts  edge_cases.test.ts  fee_transfer.test.ts
tests/unit/: property.test.ts
