[package]
name = "aggregator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aggregator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["associated_token", "token"] }
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
rand = "0.8"
